--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/CowsAndBullsDB?serverTimezone=UTC&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/cowsandbullsDB?serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=rootroot
+spring.datasource.password=Cathycassidy1!
